--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:h2:file:~/dbh2teset
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.tomcat.test-on-borrow=true
+#spring.datasource.tomcat.validation-query=SELECT 1
+#spring.datasource.sql-script-encoding=UTF-8
+
+# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
+#spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.openInView=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=validate
