Refatoração do código e dos testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-#POSTGRESQL HEROKU
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
-spring.datasource.driver-class-name={SPRING_DATASOURCE_DRIVER}
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:h2:~/dbh2teset
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.h2.Driver
+
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL-AUTO}
+spring.jpa.hibernate.ddl-auto=update
