--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,1 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
-# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:h2:~/dbh2teset
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.h2.Driver
-
-
-# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=@activatedProperties@
