--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -28,7 +28,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-		 
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -40,7 +40,7 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.1</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -72,25 +72,35 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-	
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<properties>
-				 <activatedProperties>dev</activatedProperties>
-			</properties>	
-					 
-		</profile>
-		<profile>
-			<id>prod</id>
-			<properties>
-				 <activatedProperties>prod</activatedProperties>
-			</properties>	
-				<activation>
-		        <activeByDefault>true</activeByDefault>
-		    </activation>	
-		</profile>
-	</profiles>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <activatedProperties>dev</activatedProperties>
+            </properties>
+            
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <activatedProperties>prod</activatedProperties>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+    
+    <configuration>
+        <annotationProcessorPaths>
+            <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.12</version>
+            </path>
+        </annotationProcessorPaths>
+    </configuration>
 
     <build>
         <plugins>
@@ -100,4 +110,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
