Arquivo de mensagens atualizado

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -16,4 +16,17 @@ ticker.size = Ticker deve ter no máximo {max} caracteres e no minimo {min} cara
 segmento.not.empty = Segmento não pode estar em branco
 segmento.not.null = Segmento não pode ser nulo
 
+setor.not.empty = Setor não pode estar em branco
+setor.not.null = Setor não pode ser nulo
+
+ativo.not.empty = Ativo não pode estar em branco
+ativo.not.null = Ativo não pode ser nulo
+
+###############
+
+### Usuário ###
+
+usuario.not.empty = Usuário não pode estar em branco
+usuario.not.null = Usuário não pode ser nulo
+
 ###############
