Atualizando application-docker

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -2,10 +2,10 @@
 spring.datasource.url=${MYSQL_DATASOURCE_URL}
 spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
 spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
-spring.jpa.database-platform=${MYSQL_JPA_DATABASE-PLATFORM}
 spring.datasource.driver-class-name={MYSQL_DATASOURCE_DRIVER}
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=${MYSQL_JPA_HIBERNATE_DDL-AUTO}
