Acertando var. ambientes

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,11 +1,11 @@
 #MYSQL DOCKER
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name={SPRING_DATASOURCE_DRIVER}
+spring.datasource.url=${MYSQL_DATASOURCE_URL}
+spring.datasource.username=${MYSQL_DATASOURCE_USERNAME}
+spring.datasource.password=${MYSQL_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${MYSQL_DATASOURCE_DRIVER}
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL-AUTO}
+spring.jpa.hibernate.ddl-auto=${MYSQL_JPA_HIBERNATE_DDL-AUTO}
