Add variáveis de ambiente

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,8 +1,7 @@
 #MYSQL DOCKER
-spring.datasource.url=jdbc:mysql://localhost:3306/db_corretora
-spring.datasource.username=mysqlUser
-spring.datasource.password=mysqlPassword
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/git checkout?useSSL=false
+spring.datasource.username=ROOT_USER
+spring.datasource.password=ROOT_PASSWORD
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
