--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
     - MYSQL_ROOT_PASSWORD: root
     - MYSQL_DATABASE: db_corretora
-    posts:
+    ports:
       - 3306:3306
   backend:
     build: .
