--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:8
     restart: always
     environment:
-    - MYSQL_ROOT_PASSWORD: root
+    - MYSQL_ROOT_PASSWORD=root
     - MYSQL_DATABASE: db_corretora
     ports:
       - 3306:3306
