--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     environment:
     - MYSQL_ROOT_PASSWORD=root
-    - MYSQL_DATABASE: db_corretora
+    - MYSQL_DATABASE=db_corretora
     ports:
       - 3306:3306
   backend:
@@ -15,5 +15,5 @@ services:
     ports:
       - 8080:8080
     environment:
-      - ROOT_USER: root
-      - ROOT_PASSWORD: root
+      - ROOT_USER=root
+      - ROOT_PASSWORD=root
