Atualiando o docker.properties

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 #MYSQL DOCKER
-spring.datasource.url=jdbc:mysql://localhost:3306/git checkout?useSSL=false
+spring.datasource.url=jdbc:mysql://db:3306/db_corretora checkout?useSSL=false
 spring.datasource.username=ROOT_USER
 spring.datasource.password=ROOT_PASSWORD
 
