--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 #MYSQL DOCKER
 spring.datasource.url=jdbc:mysql://db:3306/db_corretora checkout?useSSL=false
-spring.datasource.username=ROOT_USER
-spring.datasource.password=ROOT_PASSWORD
+spring.datasource.username=${ROOT_USER}
+spring.datasource.password=${ROOT_PASSWORD}
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
