--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:mysql://db:3306/db_corretora checkout?useSSL=false
 spring.datasource.username=${ROOT_USER}
 spring.datasource.password=${ROOT_PASSWORD}
+spring.database.driverClassName =com.mysql.cj.jdbc.Driver
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
