--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,11 +1,11 @@
-#MYSQL DOCKER
-spring.datasource.url=jdbc:mysql://db:3306/db_corretora checkout?useSSL=false
-spring.datasource.username=${ROOT_USER}
-spring.datasource.password=${ROOT_PASSWORD}
-spring.database.driverClassName =com.mysql.cj.jdbc.Driver
+#POSTGRES - DOCKER
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.database.driverClassName=org.postgresql.Driver
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
